fixed pdf spacing issue

--- a/client/src/styles/pdf.scss
+++ b/client/src/styles/pdf.scss
@@ -1,23 +1,30 @@
 .pdf-body {
   color: #ffffff;
-  list-style-type: none;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 1rem;
   padding: 20px;
   .pdf-item {
+    flex: 0 30%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    text-align: center;
     background: rgba(112, 112, 112, 0.432);
     padding: 15px;
     border-radius: 5px;
-    transition: all 0.3s ease-in-out;
+    gap: 10%;
+    user-select: none;
   }
-
   input[type="checkbox"] {
     scale: 1.5;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+  label:hover {
+    cursor: pointer;
   }
   .pdf-button {
     border: none;
@@ -25,16 +32,18 @@
     color: #ffffff;
     &:hover {
       color: #666;
+      cursor: pointer;
     }
     &:active {
       color: #363535;
+      cursor: pointer;
     }
   }
-  .fa-icon {
-    font-size: 24px;
-    &:hover {
-      color: #666;
-    }
+}
+.fa-icon {
+  font-size: 24px;
+  &:hover {
+    color: #666;
   }
 }
 
